fix: swagger status 200/400 responses
